# 3DPrintM

./: CMakeLists.txt  LICENSE
.github/workflows/: gating.yml
app/: main.c
include/: err_codes.h  logger.h  types.h  web_server.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/: darray.h  err_codes.h  list.h  logger.h  queue.h  str.h  str_view.h
lib/common/src/: str.c  str_view.c
lib/common/test/: CMakeLists.txt  test_common.c  test_lib_darray.c  test_lib_str.c
lib/web_server/: CMakeLists.txt
lib/web_server/include/: http_header.h  parser.h  web_server.h  worker.h
lib/web_server/src/: http_header.c  parser.c  web_server.c  worker.c
lib/web_server/test/: CMakeLists.txt  test_parser.c
src/: main.c  web_server.c
